# kioko

./: CMakeLists.txt  README.md  builtins.c  bulltins.c  cd  echo  environment.c  execute_commands.c  execute_file.c  get_line.c  help  history.c  main.c  main.h  memory_mangment.c  parser.c  print.c  str_to_k.c  strings_1.c  strings_2.c
